--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,8 @@ body, html {
     height: 100%;
     font-family: Arial, sans-serif;
     /* background-color: #002c49; */
+    background-image: url('../resources/fondo.jpg'); 
+    background-size: 600px;
 }
 
 
@@ -20,9 +22,17 @@ body, html {
 /* Estilo para el logo */
 .logo-container {
     margin-top: 0px;
-    margin-left: 40%;   
+    text-align: center;
+    margin-bottom: 10px; /* Espacio entre el logo y el formulario */
+    width: 100%;
 }
 
+.logo-container img {
+    width: 150px; /* Ajusta el tamaño del logo */
+    max-width: 100%;
+    height: auto;
+    cursor: pointer;
+}
 
 /* Modal */
 .modal-content {
