--- a/views/detalle.html
+++ b/views/detalle.html
@@ -58,11 +58,17 @@
           <textarea class="form-control" id="notas" rows="2" placeholder="Cualquier observación..."></textarea>
         </div>
       
-        <button class="btn btn-primary" id="guardarDetalle">Guardar</button>
+        <button class="btn btn-success mb-3" id="guardarDetalle">
+          Guardar 💾
+        ​</button>
+
+        <button id="compartirBtn" class="btn btn-dark ">
+          Compartir enlace 🔗
+        </button>
 
         
     </div>
-    
+
     <a href="../index.html" class="btn btn-secondary mt-3 mb-3 w-100">Volver al mapa</a>
       
     
